crates/ide/src/snapshots/ide__index__tests__circular_include.snap
---
source: crates/ide/src/index.rs
expression: "dump_diagnostics(&index.diagnostics, &f)"
---
file2.td
circular include detected: file1.td
include "file1.td"
^^^^^^^^^^^^^^^^^^
