crates/ide/src/snapshots/ide__index__tests__class.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class SimpleClass<> : {
}
class ClassWithFields<> : {
  int field1;
  string field2;
  bit field3;
}
class TemplatedClass<int size, string name, > : {
  int Size;
  string Name;
}
class DefaultTemplateArgs<int x, string y, > : {
}
class Base<> : {
  int base_field;
}
class Derived<> : Base, {
  int base_field;
  int derived_field;
}
class Mixin1<> : {
  int mixin1_field;
}
class Mixin2<> : {
  int mixin2_field;
}
class MultiInherit<> : Mixin1, Mixin2, {
  int own_field;
}
class ParamBase<int x, > : {
}
class ParamDerived<> : ParamBase, {
}
class Inner<> : {
  int inner_value;
}
class Outer<> : {
  Inner inner_field;
}
class ListClass<> : {
  list<int> numbers;
  list<SimpleClass> objects;
}
class DefVarClass<> : {
  int regular_field;
}
variable int defvar_field
class AssertClass<> : {
  int value;
}
