crates/ide/src/snapshots/ide__index__tests__defm_parent_class-3.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class Base<> : {
}
class Extra1<> : {
}
class Extra2<> : {
}
multiclass MC {
def placeholder : Base, {
}
def placeholder : Base, {
}
}
def inst_single_A : Base, Extra1, {
}
def inst_single_B : Base, Extra1, {
}
def inst_multi_A : Base, Extra1, Extra2, {
}
def inst_multi_B : Base, Extra1, Extra2, {
}
multiclass OuterMC {
defm placeholder : MC, ;
}
def outer_instinner_A : Base, Extra1, Extra2, {
}
def outer_instinner_B : Base, Extra1, Extra2, {
}
