crates/ide/src/snapshots/ide__index__tests__defm_parent_class.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class Base<> : {
}
class Extra1<> : {
}
class Extra2<> : {
}
multiclass MC {
def placeholder : Base, {
}
def placeholder : Base, {
}
}
multiclass OuterMC {
defm placeholder : MC, ;
}
