crates/ide/src/snapshots/ide__index__tests__errors-2.snap
---
source: crates/ide/src/index.rs
expression: dump_diagnostics(index.diagnostics())
---
[
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 92..106,
            },
            message: "class not found: UndefinedClass",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 194..212,
            },
            message: "symbol not found: undefined_variable",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 348..366,
            },
            message: "cannot access field: nonexistent_field",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 402..429,
            },
            message: "field 'nonexistent_field' not found in record",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 505..517,
            },
            message: "field 'int_field' of type 'int' is incompatible with type 'string'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 543..544,
            },
            message: "field 'string_field' of type 'string' is incompatible with type 'int'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 569..589,
            },
            message: "field 'int_list' of type 'list<int>' is incompatible with type 'list<string>'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 724..737,
            },
            message: "def 'duplicate_def' already defined",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 798..799,
            },
            message: "template argument 'x' is already defined",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 873..874,
            },
            message: "field 'x' is already defined in record",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 932..945,
            },
            message: "variable 'duplicate_var' is already defined in the current scope",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 981..994,
            },
            message: "variable 'duplicate_def' is already defined in the current scope",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1119..1135,
            },
            message: "defset 'duplicate_defset' already defined",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1207..1227,
            },
            message: "multiclass 'duplicate_multiclass' already defined",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1324..1331,
            },
            message: "class 'CyclicA' has cyclic inheritance",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1612..1624,
            },
            message: "value not specified for template argument 'x'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1612..1624,
            },
            message: "value not specified for template argument 'y'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1667..1683,
            },
            message: "value not specified for template argument 'y'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1728..1749,
            },
            message: "too many arguments: 3",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1927..1933,
            },
            message: "field 'derived_field1' of type 'Derived' is incompatible with type 'Base'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 1962..1973,
            },
            message: "field 'derived_field2' of type 'Derived' is incompatible with type 'Unrelated'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 2256..2259,
            },
            message: "the name of named argument should be a valid identifier",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 2261..2264,
            },
            message: "the name of named argument should be a valid identifier",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 2352..2366,
            },
            message: "value not specified for template argument 'y'",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 2362..2365,
            },
            message: "the name of named argument should be a valid identifier",
        },
    ),
]
