crates/ide/src/snapshots/ide__index__tests__errors-4.snap
---
source: crates/ide/src/index.rs
expression: "dump_diagnostics(&index.diagnostics, &f)"
---
testdata/errors.td
class not found: UndefinedClass
 def undefined_class_ref : UndefinedClass;
                           ^^^^^^^^^^^^^^

testdata/errors.td
symbol not found: undefined_variable
defvar uses_undefined = undefined_variable;
                        ^^^^^^^^^^^^^^^^^^

testdata/errors.td
field 'nonexistent_field' not found in record
defvar bad_field_access = HasField<>.nonexistent_field;
                                    ^^^^^^^^^^^^^^^^^^

testdata/errors.td
field 'nonexistent_field' not found in record
  let nonexistent_field = 10;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

testdata/errors.td
symbol not found: nonexistent_var
class Foo<int a = nonexistent_var> {
                  ^^^^^^^^^^^^^^^

testdata/errors.td
symbol not found: nonexistent_var
  int b = nonexistent_var;
          ^^^^^^^^^^^^^^^

testdata/errors.td
symbol not found: nonexistent_var
class Bar: Foo<nonexistent_var>;
               ^^^^^^^^^^^^^^^

testdata/errors.td
field 'int_field' of type 'int' is incompatible with type 'string'
  int int_field = "not_an_int";
                  ^^^^^^^^^^^^

testdata/errors.td
field 'string_field' of type 'string' is incompatible with type 'int'
  string string_field = 1;
                        ^

testdata/errors.td
field 'int_list' of type 'list<int>' is incompatible with type 'list<string>'
  list<int> int_list = ["string", "values"];
                       ^^^^^^^^^^^^^^^^^^^^

testdata/errors.td
def 'duplicate_def' already defined
def duplicate_def;  // Duplicate def
    ^^^^^^^^^^^^^

testdata/errors.td
template argument 'x' is already defined
class duplicate_template_arg<int x, int x>; // Duplicate template argument
                                        ^

testdata/errors.td
field 'x' is already defined in record
  string x; // Duplicate field
         ^

testdata/errors.td
variable 'duplicate_var' is already defined in the current scope
defvar duplicate_var = 10; // Duplicate variable
       ^^^^^^^^^^^^^

testdata/errors.td
variable 'duplicate_def' is already defined in the current scope
defvar duplicate_def = 10; // Duplicate variable
       ^^^^^^^^^^^^^

testdata/errors.td
defset 'duplicate_defset' already defined
defset list<for_dup_test> duplicate_defset = {}; // Duplicate defset
                          ^^^^^^^^^^^^^^^^

testdata/errors.td
multiclass 'duplicate_multiclass' already defined
multiclass duplicate_multiclass; // Duplicate multiclass
           ^^^^^^^^^^^^^^^^^^^^

testdata/errors.td
class 'CyclicA' has cyclic inheritance
class CyclicA : CyclicA;
                ^^^^^^^

testdata/errors.td
class 'CyclicB' has cyclic inheritance
class CyclicC : CyclicB;
                ^^^^^^^

testdata/errors.td
value not specified for template argument 'x'
def missing_args : RequiresArgs;
                   ^^^^^^^^^^^^

testdata/errors.td
value not specified for template argument 'y'
def missing_args : RequiresArgs;
                   ^^^^^^^^^^^^

testdata/errors.td
value not specified for template argument 'y'
def partial_args : RequiresArgs<10>;
                   ^^^^^^^^^^^^^^^^

testdata/errors.td
too many arguments: 3
def too_many_args : RequiresArgs<1, 2, 3>;
                    ^^^^^^^^^^^^^^^^^^^^^

testdata/errors.td
field 'derived_field1' of type 'Derived' is incompatible with type 'Base'
  Derived derived_field1 = Base<>;
                           ^^^^^^

testdata/errors.td
field 'derived_field2' of type 'Derived' is incompatible with type 'Unrelated'
  Derived derived_field2 = Unrelated<>;
                           ^^^^^^^^^^^

testdata/errors.td
value not specified for template argument 'y'
def dup_named : NamedArgs<x=1, x=2>;
                ^^^^^^^^^^^^^^^^^^^

testdata/errors.td
we can only specify the template argument 'x' once
def dup_named : NamedArgs<x=1, x=2>;
                               ^^^

testdata/errors.td
value not specified for template argument 'x'
def unknown_named : NamedArgs<z=1>;
                    ^^^^^^^^^^^^^^

testdata/errors.td
value not specified for template argument 'y'
def unknown_named : NamedArgs<z=1>;
                    ^^^^^^^^^^^^^^

testdata/errors.td
template argument 'z' doesn't exist
def unknown_named : NamedArgs<z=1>;
                              ^^^

testdata/errors.td
expected bits type, got 'string'
defvar bad_range_suffix = "hoge"{0};
                                ^^^

testdata/errors.td
expected list type, got 'string'
defvar bad_slice_suffix = "hoge"[0];
                                ^^^

testdata/errors.td
list element '2' is incompatible with list element type 'string'
defvar list_incompatible1 = ["hoge", 2];
                                     ^

testdata/errors.td
list element '"hoge"' is incompatible with list element type 'int'
defvar list_incompatible2 = ["hoge"]<int>;
                             ^^^^^^
