crates/ide/src/snapshots/ide__index__tests__errors.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
def undefined_class_ref : {
}
variable unknown uses_undefined
class HasField<> : {
  int existing_field;
}
variable unknown bad_field_access
def bad_field_let : HasField, {
}
class Foo<int a, > : {
  int b;
}
class Bar<> : Foo, {
}
class TypeMismatch<> : {
  int int_field;
  string string_field;
  list<int> int_list;
}
class duplicate_class<> : {
}
def duplicate_def : {
}
class duplicate_template_arg<int x, > : {
}
class duplicate_field<> : {
  int x;
}
variable int duplicate_var
class for_dup_test<> : {
}
defset list<for_dup_test> duplicate_defset
multiclass duplicate_multiclass {
class CyclicA<> : {
}
class CyclicB<> : CyclicC, {
}
class CyclicC<> : {
}
class RequiresArgs<int x, string y, > : {
  int value;
  string name;
}
def missing_args : RequiresArgs, {
}
def partial_args : RequiresArgs, {
}
def too_many_args : RequiresArgs, {
}
class Base<> : {
}
class Derived<> : Base, {
}
class Unrelated<> : {
}
class FieldIncompat<> : {
  Derived derived_field1;
  Derived derived_field2;
}
class InvalidBits<> : {
}
class NamedArgs<int x, int y, > : {
}
def dup_named : NamedArgs, {
}
def unknown_named : NamedArgs, {
}
